--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mynavbar" aria-expanded="false" aria-controls="navbar">
                               <span class="fa fa-bars"></span>
                           </button>
-                <a href="index.html" class="navbar-brand">KangYong</a>
-                <!-- <img style="max-width:60px; margin-left: 0px;" src="img/2021kangyong_logo_color.jpg">  -->
+                        
+                <a href="index.html" class="navbar-brand">
+                <img style="max-width:60px" src="img/2021kangyong_logo_black.jpg"> KangYong</a>
               </div>
               <div class="collapse navbar-collapse navbar-right" id="mynavbar">
                 <ul class="nav navbar-nav">
                   <li class="active"><a href="#header">Home</a></li>
                   <li><a href="#About">About</a></li>
-                  <li><a href="#I'm new">I'm new</a></li>
                   <li><a href="#contact">Contact</a></li>
                 </ul>
               </div>
@@ -86,128 +86,14 @@
             <p class="sec-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua..</p>
           </div>
         </div>
-        <div class="col-md-9">
-          <div class="col-md-6 wow fadeInRight delay-02s">
-            <div class="icon">
-              <i class="fa fa-paint-brush"></i>
-            </div>
-            <div class="icon-text">
-              <h3 class="txt-tl">Easy to Learn and Design</h3>
-              <p class="txt-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ligula felis euismod semper. </p>
-            </div>
-          </div>
-          <div class="col-md-6 wow fadeInRight delay-02s">
-            <div class="icon">
-              <i class="fa fa-cogs"></i>
-            </div>
-            <div class="icon-text">
-              <h3 class="txt-tl">Bootstrap 3.3.2</h3>
-              <p class="txt-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ligula felis euismod semper. </p>
-            </div>
-          </div>
-          <div class="col-md-6 wow fadeInRight delay-04s">
-            <div class="icon">
-              <i class="fa fa-mobile"></i>
-            </div>
-            <div class="icon-text">
-              <h3 class="txt-tl">Responsive Design</h3>
-              <p class="txt-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ligula felis euismod semper. </p>
-            </div>
-          </div>
-          <div class="col-md-6 wow fadeInRight delay-04s">
-            <div class="icon">
-              <i class="fa fa-desktop"></i>
-            </div>
-            <div class="icon-text">
-              <h3 class="txt-tl">No Coding, No Shortcodes</h3>
-              <p class="txt-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ligula felis euismod semper. </p>
-            </div>
-          </div>
-          <div class="col-md-6 wow fadeInRight delay-06s">
-            <div class="icon">
-              <i class="fa fa-lightbulb-o"></i>
-            </div>
-            <div class="icon-text">
-              <h3 class="txt-tl">High Coversion</h3>
-              <p class="txt-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ligula felis euismod semper. </p>
-            </div>
-          </div>
-          <div class="col-md-6 wow fadeInRight delay-06s">
-            <div class="icon">
-              <i class="fa fa-clock-o"></i>
-            </div>
-            <div class="icon-text">
-              <h3 class="txt-tl">Save Tons of Time</h3>
-              <p class="txt-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ligula felis euismod semper. </p>
-            </div>
-          </div>
-        </div>
+        
       </div>
     </div>
   </section>
   <!---->
-  <section class="section-padding parallax bg-image-2 section wow fadeIn delay-08s" id="cta-2">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8">
-          <div class="cta-txt">
-            <h3>Subscribe For Updates</h3>
-            <p>Join our 1000+ subscribers and get access to the latest tools, freebies, product announcements and much more!</p>
-          </div>
-        </div>
-        <div class="col-md-4 text-center">
-          <a href="#" class="btn btn-submit">Subscribe Now</a>
-        </div>
-      </div>
-    </div>
-  </section>
+  
   <!---->
   <!---->
-  <section class="section-padding wow fadeInUp delay-02s" id="I'm new">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3 col-sm-12">
-          <div class="section-title">
-            <h2 class="head-title">I'm new</h2>
-            <hr class="botm-line">
-            <p class="sec-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua..</p>
-          </div>
-        </div>
-        <div class="col-md-9 col-sm-12">
-          <div class="col-md-4 col-sm-6 padding-right-zero">
-            <div class="I'm new-box design">
-              <img src="img/port01.jpg" alt="" class="img-responsive">
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 padding-right-zero">
-            <div class="I'm new-box design">
-              <img src="img/port02.jpg" alt="" class="img-responsive">
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 padding-right-zero">
-            <div class="I'm new-box design">
-              <img src="img/port03.jpg" alt="" class="img-responsive">
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 padding-right-zero">
-            <div class="I'm new-box design">
-              <img src="img/port04.jpg" alt="" class="img-responsive">
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 padding-right-zero">
-            <div class="I'm new-box design">
-              <img src="img/port05.jpg" alt="" class="img-responsive">
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 padding-right-zero">
-            <div class="I'm new-box design">
-              <img src="img/port06.jpg" alt="" class="img-responsive">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
   <!---->
   <!---->
   <section class="section-padding wow fadeInUp delay-05s" id="contact">
